--- a/app/public/index.html
+++ b/app/public/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="/assets/app.js"></script>
+    <script src="./app.js"></script>
     <script>
       var app = Elm.Main.embed(document.getElementById('main'))
 
